Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,10 @@ a:active {
   width: 40ch;
   background: #ffffff90;
   backdrop-filter: blur(2px);
-  padding: 1rem;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
 }
 
 button {
@@ -101,6 +104,7 @@ button {
   display: flex;
   align-items: center;
   border: none;
+  width: fit-content;
 }
 
 .cta::after {
@@ -110,7 +114,7 @@ button {
   top: 0;
   right: -2rem;
   height: 100%;
-  width: 25%;
+  width: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
